# delta-types

./: CONTRIBUTING.md  README.md  cabal.project
.github/workflows/: build.yml
doc/delta-store/: CHANGELOG.md  Data-DBVar.html  Data-Delta-Update.html  Data-Store.html  README.md  Test-Data-Store.html  Test-Store.html  delta-store.haddock  doc-index.html  index.html
doc/delta-store/src/: Data.DBVar.html  Data.Delta.Update.html  Data.Store.html  Test.Data.Store.html  Test.Store.html
doc/delta-types/: Data-Delta-Core.html  Data-Delta-Embedding-Internal.html  Data-Delta-Embedding.html  Data-Delta-List.html  Data-Delta-Map.html  Data-Delta-Set.html  Data-Delta.html  delta-types.haddock  doc-index.html  index.html
doc/delta-types/src/: Data.Delta.Core.html  Data.Delta.Embedding.Internal.html  Data.Delta.Embedding.html  Data.Delta.List.html  Data.Delta.Map.html  Data.Delta.Set.html  Data.Delta.html
lib/delta-store/: delta-store.cabal
lib/delta-store/src/Data/: DBVar.hs  Store.hs
lib/delta-store/src/Data/Delta/: Update.hs
lib/delta-store/src/Test/: Store.hs
lib/delta-store/src/Test/Data/: Store.hs
lib/delta-store/test/unit/Data/: DBVarSpec.hs  StoreSpec.hs
lib/delta-types/: README.md  delta-types.cabal
lib/delta-types/src/Data/: Delta.hs
lib/delta-types/src/Data/Delta/: Embedding.hs  List.hs
lib/delta-types/test/unit/Data/Delta/: CoreSpec.hs  EmbeddingSpec.hs  ListSpec.hs  SetSpec.hs
