cabal-version:   2.2
name:            delta-store
version:         1.0.0.0
synopsis:        Facilities for storing a Haskell value, using delta types.
description:
  This package provides facilities for storing Haskell values
  in persistent storage as opposed to in volatile memory.
  .
  * "Data.Store" — store values outside of volatile memory (RAM).
  .
  * "Data.DBVar" — mutable variable that mirrors its value in a 'Store'.

homepage:        https://github.com/cardano-foundation/delta-types
license:         Apache-2.0
license-file:    LICENSE
author:          Cardano Foundation (High Assurance Lab)
maintainer:      hal@cardanofoundation.org
copyright:       2021-2023 IOHK, 2024-2025 Cardano Foundation
category:        Data Structures
build-type:      Simple
tested-with:     GHC ==9.6.6
extra-doc-files:
  CHANGELOG.md
  README.md

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options:
    -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  import:      opts-lib
  ghc-options: -threaded -rtsopts

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  src
  build-depends:
    , base          >=4.14    && <5
    , delta-types   >=1.0.0.0 && <1.1
    , io-classes    >=1.4.0.0 && <1.8
    , QuickCheck    >=2.14    && <2.16
    , transformers  >=0.6.1.0 && <0.7

  exposed-modules:
    Data.DBVar
    Data.Delta.Update
    Data.Store
    Test.Store

test-suite unit
  import:             language, opts-exe
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/unit
  main-is:            Main.hs
  build-depends:
    , base
    , delta-store
    , delta-types
    , hspec        >=2.11.0 && <2.12
    , QuickCheck

  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      Data.StoreSpec
